--- a/failure.html
+++ b/failure.html
@@ -12,7 +12,7 @@
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Ops! Something went wrong. Please try again.</h1>
-          <a class="btn btn-primary btn-lg" href="/signup.html" role="button">Home</a>
+          <a class="btn btn-primary btn-lg" href="/signup.html" role="button">Try Again.</a>
         </div>
       </div>
     
